--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -92,6 +92,12 @@
     &-button
       &-prev, &-next
         top: 18rem
+  .control
+    &__section-title
+      margin-top: 0
+      color: $dark
+    &__input
+      color: $dark
         
   
 
@@ -124,15 +130,7 @@
     padding-top: 1rem
     padding-bottom: 0
     &__video
-      width: 100%
-      height: 100%
-      margin-top: -5.5rem
-      margin-bottom: -4rem
-      &::before
-        content: ''
-        width: 100%
-        height: 100%
-        background-color: rgba($dark, 0.8)
+      max-height: 207px
       &__play
         width: 20%
     &__text
