--- a/css/style.css
+++ b/css/style.css
@@ -348,18 +348,19 @@ template {
   border: 0;
   border-bottom: 1px solid rgba(54, 54, 54, 0.3);
   font-size: 1.285rem;
-  color: #fff;
   padding: 0.5rem 0; }
-  .input--light::-webkit-input-placeholder {
+  .input--light {
     color: #fff; }
-  .input--light::-moz-placeholder {
-    color: #fff; }
-  .input--light:-ms-input-placeholder {
-    color: #fff; }
-  .input--light::-ms-input-placeholder {
-    color: #fff; }
-  .input--light::placeholder {
-    color: #fff; }
+    .input--light::-webkit-input-placeholder {
+      color: #fff; }
+    .input--light::-moz-placeholder {
+      color: #fff; }
+    .input--light:-ms-input-placeholder {
+      color: #fff; }
+    .input--light::-ms-input-placeholder {
+      color: #fff; }
+    .input--light::placeholder {
+      color: #fff; }
 
 .policy__checkbox {
   opacity: 0;
@@ -657,8 +658,8 @@ body {
   display: flex;
   margin: auto;
   max-width: 57.357rem;
-  min-height: 31rem;
-  background: url(../img/image-control.jpg) no-repeat center/100%;
+  height: 31rem;
+  background: url(../img/image-control.jpg) no-repeat center/cover;
   box-shadow: 0px 20px 50px rgba(0, 0, 0, 0.15);
   margin-bottom: 4.428rem; }
   .control__video::before {
@@ -913,7 +914,12 @@ body {
   .swiper-pagination-bullets {
     top: 16.2rem; }
   .swiper-button-prev, .swiper-button-next {
-    top: 18rem; } }
+    top: 18rem; }
+  .control__section-title {
+    margin-top: 0;
+    color: #131313; }
+  .control__input {
+    color: #131313; } }
 
 @media screen and (max-width: 576px) {
   .hero__scroll-down {
@@ -937,15 +943,7 @@ body {
     padding-top: 1rem;
     padding-bottom: 0; }
     .control__video {
-      width: 100%;
-      height: 100%;
-      margin-top: -5.5rem;
-      margin-bottom: -4rem; }
-      .control__video::before {
-        content: '';
-        width: 100%;
-        height: 100%;
-        background-color: rgba(19, 19, 19, 0.8); }
+      max-height: 207px; }
       .control__video__play {
         width: 20%; }
     .control__text {
