--- a/sass/templates/_controll.sass
+++ b/sass/templates/_controll.sass
@@ -8,8 +8,8 @@
     display: flex
     margin: auto
     max-width: 57.357rem
-    min-height: 31rem
-    background: url(../img/image-control.jpg) no-repeat center / 100%
+    height: 31rem
+    background: url(../img/image-control.jpg) no-repeat center / cover
     box-shadow: 0px 20px 50px rgba(0, 0, 0, 0.15)
     margin-bottom: 4.428rem
     &::before
