--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -129,6 +129,8 @@
     background-color: $dark
     padding-top: 1rem
     padding-bottom: 0
+    &__section-title
+      color: $light
     &__video
       max-height: 207px
       &__play
